[package]
name = "music_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12" }
scraper = { version = "0.22" }
tokio = { version = "1.43", features = ["fs", "macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
